--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=alisondefontes@gmail.com;
-default.recipient=alisondefontes@gmail.com;
+default.sender=sistema.fontes@gmail.com
+default.recipient=sistema.fontes@gmail.com
+
