Implementando autenticacao e geracao do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.profiles.active=dev
 default.sender=sistema.fontes@gmail.com
 default.recipient=sistema.fontes@gmail.com
 
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
